[package]
name = "ssb-packetstream"
version = "0.1.0"
authors = ["sean billig <sean.billig@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"
description = "Secure Scuttlebutt packet stream protocol"
repository = "https://github.com/sunrise-choir/ssb-packetstream"
documentation = "https://docs.rs/ssb-packetstream/"
readme = "README.md"
keywords = ["packet-stream", "protocol", "ssb", "scuttlebutt"]

[dependencies]
byteorder = "1.3.1"
futures-preview = "0.3.0-alpha.16"

[dev-dependencies]
async-ringbuffer = "0.5.1"
